move lamp flicker animation to correct css file

--- a/src/components/Article/Article.module.css
+++ b/src/components/Article/Article.module.css
@@ -98,27 +98,3 @@
     transition: all 1s ease-in-out;
   }
 }
-
-@keyframes candleFlicker {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0.8;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes jiggle {
-  0% {
-    transform: rotate(-5deg);
-  }
-  50% {
-    transform: rotate(5deg);
-  }
-  100% {
-    transform: rotate(-5deg);
-  }
-}
