--- a/src/components/common/ArticleContent/ArticleContent.module.css
+++ b/src/components/common/ArticleContent/ArticleContent.module.css
@@ -13,3 +13,27 @@
   fill: #c09c09;
   animation: candleFlicker 0.5s infinite;
 }
+
+@keyframes candleFlicker {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes jiggle {
+  0% {
+    transform: rotate(-5deg);
+  }
+  50% {
+    transform: rotate(5deg);
+  }
+  100% {
+    transform: rotate(-5deg);
+  }
+}
